# quark

./: .gitattributes  .gitignore  .gitmodules  .quarkrc  CHANGELOG.md  Dockerfile  GUIDE.md  README.md  SECURITY.md  TODO.md  package.json  quark-hs.cabal  quark.cabal  test.qrk  tsconfig.json  update_and_build.sh
.github/workflows/: build.yml  codeql-analysis.yml  docker.yml  test.yml
api/: api.ts  quarkifier.ts
api/typings/: callback.ts  types.ts
app/: Main.hs
app/Core/: CLI.hs  Entry.hs  Quark.hs  placeholder.js
app/Core/CLI/: CLI.hs  Type.hs
app/Core/CLI/Commands/: Build.hs  Help.hs
app/Core/Closure/: Converter.hs  Definition.hs
app/Core/Closure/Definition/: Closure.hs  Pretty.hs
app/Core/Compiler/: CLang.hs  CPP.hs  Compiler.hs  Instruction.hs  Javascript.hs  Serializer.hs  Uncurry.hs
app/Core/Compiler/Definition/: Generation.hs  IR.hs
app/Core/Compiler/Modules/: ADT.hs  Pattern.hs
app/Core/Compiler/Utils/: Pretty.hs
app/Core/Constant/: Instances.hs  Propagation.hs
app/Core/Import/: Duplicates.hs  Remover.hs  Type.hs
app/Core/Inference/: Kind.hs  Type.hs
app/Core/Inference/Type/: AST.hs  Methods.hs  Parsing.hs  Pretty.hs
app/Core/Macro/: Compiler.hs  Definition.hs  Initializing.hs
app/Core/Macro/Definition/: Macro.hs  Type.hs
app/Core/Macro/Initializing/: Environment.hs  Remover.hs
app/Core/Parser/: AST.hs  Combinator.hs  Macros.hs  Parser.hs  TypeDeducer.hs
app/Core/Parser/AST/: Expression.hs  Literal.hs
app/Core/Parser/Utils/: Closure.hs  ClosureConversion.hs  ConstantPropagation.hs  Curry.hs  Garbage.hs  Imports.hs  Module.hs  Pretty.hs
app/Core/Utility/: Error.hs  InstanceResolver.hs  Sugar.hs
app/Core/VM/: main.c  vm.js
sample/: ackermann.qrk  factorial.qrk  fibonacci.qrk  index.qrk  json.js  main.qrk  print.js  print.ts  repl.qrk  test.qrk  welcome.qrk
sample/map/: map.qrk
sample/std/: foreach.qrk  length.qrk
src/: Main.hs  main.ts  repl.ts
src/core/: Compiler.hs  Parser.hs  README.md  compiler.ts  formatter.ts  interpreter.ts  lexer.ts  parser.ts  processor.ts
src/core/doc/: LEXER.md  PARSER.md  PROCESSOR.md
src/interfaces/: stack.ts
src/typings/: block.ts  token.ts  types.ts
src/utils/: file.ts  runner.ts
src/vm/: Interpreter.hs  Stack.hs  vm.ts
std/: core.js  prelude.qrk
std/modules/: color.qrk
std/types/: expression.qrk  list.qrk  natural.qrk
tests/: Parser.spec.hs  Spec.hs  facto.qrk  foreach.qrk  length.qrk  main.qrk  path.qrk  push.qrk  recursion.qrk  test.qrk  types.qrk  vm.qrk
tests/modules/: io.qrk  math.qrk
tests/test/: Compiler.hs  Parser.hs
tests/types/: list.qrk
wrapper/: wrapper.ts
