cabal-version:      2.4
name:               quark-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             thomasvergne
maintainer:         thomas@quark-lang.dev

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable quark-hs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        -- Parser related
        Core.Parser.Combinator
        Core.Parser.Parser
        Core.Parser.AST
        Core.Parser.Macros

        Core.Inference.Type
        Core.Inference.Kind
        Core.Inference.Type.AST
        Core.Inference.Type.Pretty
        Core.Inference.Type.Methods
        Core.Inference.Type.Parsing
        Core.Color
        
        Core.Parser.Utils.ConstantPropagation
        Core.Parser.Utils.Module
        Core.Parser.Utils.Garbage
        --Core.Parser.Utils.ClosureConversion

        --Core.Compiler.Compiler
        Core.Compiler.Instruction
        --Core.Compiler.CLang
    -- LANGUAGE extensions used by modules in this package.
    default-extensions:
      ConstraintKinds
      FlexibleContexts
      OverloadedStrings
    build-depends:    
        base
      , mtl
      , directory
      , filepath
      , containers
    hs-source-dirs:   app
    default-language: Haskell2010
