cabal-version:      2.4
name:               quark
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             thomasvergne
maintainer:         thomas@quark-lang.dev

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable quark
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        -- Parser related
        Core.Parser.Parser
        Core.Parser.AST
        Core.Parser.Macros

        Core.Inference.Type
        Core.Inference.Kind
        Core.Inference.Type.AST
        Core.Inference.Type.Pretty
        Core.Inference.Type.Methods
        Core.Inference.Type.Parsing
        
        Core.Parser.Utils.ConstantPropagation
        Core.Parser.Utils.Module
        Core.Parser.Utils.Garbage
        Core.Parser.Utils.Curry
        --Core.Parser.Utils.ClosureConversion
        Core.Parser.Utils.Imports

        --Core.Compiler.Compiler
        Core.Compiler.Javascript
        Core.Compiler.Uncurry
        
        Core.Entry
        Core.Color
        Core.CLI
    -- LANGUAGE extensions used by modules in this package.
    default-extensions:
      ConstraintKinds
      FlexibleContexts
      OverloadedStrings
    build-depends:    
        base
      , mtl
      , directory
      , process
      , filepath
      , containers
      , megaparsec
      , projectroot
    hs-source-dirs:   app
    default-language: Haskell2010
