cabal-version:      2.4
name:               quark
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             thomasvergne
maintainer:         thomas@quark-lang.dev

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable quark
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Core.Quark
        -- Parser related
        Core.Parser.Parser
        Core.Parser.AST
          Core.Parser.AST.Expression
          Core.Parser.AST.Literal

        -- Macro related
        Core.Macro.Compiler
        Core.Macro.Definition
          Core.Macro.Definition.Macro
          Core.Macro.Definition.Type
        Core.Macro.Initializing
          Core.Macro.Initializing.Environment
          Core.Macro.Initializing.Remover
        
        Core.Import.Type
        Core.Import.Duplicates
        Core.Import.Remover

        Core.Inference.Type
          Core.Inference.Type.AST
          Core.Inference.Type.Methods
          Core.Inference.Type.Parsing
          Core.Inference.Type.Pretty
        
        Core.Closure.Definition
          Core.Closure.Definition.Closure
          Core.Closure.Definition.Pretty
        Core.Closure.Converter

        Core.Utility.Color
        Core.Utility.Error
        Core.Utility.Sugar

        Core.Constant.Instances
        Core.Constant.Propagation

        Core.Compiler.Compiler
          Core.Compiler.Definition.Generation
          Core.Compiler.Definition.IR
          
          Core.Compiler.Modules.Pattern
          Core.Compiler.Modules.ADT

        Core.Entry
        Core.CLI.CLI
    -- LANGUAGE extensions used by modules in this package.
    default-extensions:
      ConstraintKinds
      FlexibleContexts
      OverloadedStrings
    build-depends:    
        base
      , mtl
      , directory
      , process
      , filepath
      , containers
      , megaparsec
      , semialign
      , these
    hs-source-dirs:   app
    default-language: Haskell2010
